correccion aria-live al modificar filtro

--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -156,9 +156,10 @@ general.question=pregunta
 general.survey_info=información de encuesta
 
 ######TODO
-general.survey.filters.numRecord=Modificado el numero de encuestas por página, cambiado a
-general.survey.filters.find=Mostrando encuestas que contengan el texto
-general.survey.filters.states=Mostrando encuestas con el estado
+general.survey.filters.updated = Tabla actualizada
+general.survey.filters.numRecord= mostrando $VAL registros por página
+general.survey.filters.find= para el texto: 
+general.survey.filters.states= para el estado:
 ######EOFTODO
 #******************
 # Home
